example/lib/src/generated/errors/errors_localization_ko.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Korean (`ko`).
class ErrorsLocalizationKo extends ErrorsLocalization {
  ErrorsLocalizationKo([String locale = 'ko']) : super(locale);

  @override
  String get error => '오류가 발생했습니다';

  @override
  String get unexpectedError => '예기치 않은 오류가 발생했습니다';

  @override
  String get bugReportSentText => '버그 신고가 성공적으로 전송되었습니다.';
}
